Fixed navbar collapse

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -4,9 +4,7 @@
  * Feel free to change them and create your own
  * ------------------------------------- */
 
-body {
-  margin-top: 70px;
-}
+
 
 a:hover {
   text-decoration: none;
